--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-2">
                     <div class="fw-bold">Offerta:</div>
-                    <div id="ticketSale"></div>
+                    <div id="biglietto"></div>
                 </div>
                 <div class="col-2">
                     <div class="fw-bold">Carrozza:</div>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-2">
                     <div class="fw-bold">Costo biglietto:</div>
-                    <div id="ticketprezzo"></div>
+                    <div id="prezzo"></div>
                 </div>
             </div>
         </div>
